CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE TRUE)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

INCLUDE_DIRECTORIES(
  ${OPENGL_INCLUDE_DIR}
  ${CMAKE_SOURCE_DIR}/texture
  ${GLFW_INCLUDE_DIRS}
  )

CUDA_ADD_EXECUTABLE(first first.cu)

TARGET_LINK_LIBRARIES(first
  ${OPENGL_LIBRARIES}
  ${CUDA_LIBRARIES}
  ${GLFW_LIBRARIES}
  ${GLEW_LIBRARY}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
