CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE TRUE)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PNG REQUIRED)

INCLUDE_DIRECTORIES(
  ${OPENGL_INCLUDE_DIR}
  ${GLUT_INCLUDE_DIR}
  ${PNG_INCLUDE_DIRS}
  )

ADD_EXECUTABLE(loadTextureFromPng 
		main.cpp loadTextureFromPng.cpp 
		)

TARGET_LINK_LIBRARIES(loadTextureFromPng 
  ${OPENGL_LIBRARIES}
  ${GLUT_LIBRARIES}
  ${GLEW_LIBRARY}
  ${PNG_LIBRARIES}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

file(COPY "${CMAKE_SOURCE_DIR}/2.png" DESTINATION "${CMAKE_BINARY_DIR}")



