CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE TRUE)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(
  ${OPENGL_INCLUDE_DIR}
  ${SDL2_INCLUDE_DIRS}
  )


CUDA_ADD_EXECUTABLE(graph graph.cu 
  ../common/shader_utils.cpp)

TARGET_LINK_LIBRARIES(graph
  ${OPENGL_LIBRARIES}
  ${CUDA_LIBRARIES}
  ${SDL2_LIBRARIES}
  ${GLEW_LIBRARY}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

file(COPY "${CMAKE_SOURCE_DIR}/graph.v.glsl" DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY "${CMAKE_SOURCE_DIR}/graph.f.glsl" DESTINATION "${CMAKE_BINARY_DIR}")
